more changes needed to fix weird horizontal scrollbar

--- a/assets/scss/_landingpage.scss
+++ b/assets/scss/_landingpage.scss
@@ -1,6 +1,6 @@
 .landing-page-container {
-    width: 100vw;
-    max-width: 100vw;
+    width: 100%;
+    max-width: 100%;
     overflow: hidden;
     
     min-height: 100vh;
@@ -416,7 +416,7 @@
 .landing-page-clear-bottom {
     z-index: 11;
     background-color: #FFF;
-    width: 100vw;
+    width: 100%;
     min-height: 35vh;
     position: relative;
     margin-bottom: -20vh;
