--- a/assets/scss/templates/_main.scss
+++ b/assets/scss/templates/_main.scss
@@ -855,7 +855,7 @@ padding: 20px 0px 0px 0px;
 }
 
 .layer {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   display: flex;
   justify-content: center;
